--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,20 @@ ul {
 }
 
 li {
-  margin-left: 50px;
+  margin: 20px;
   padding: 5px;
+  color: white;
+  background-color: #A52A2A;
+  border: 1px solid black;
   text-align: left;
   font-family: Arial, Verdana, sans-serif;
   font-size: 1.5em;
   font-weight: 700;
+}
+
+li:hover {
+  background-color: #F15656;
+
 }
 
 img {
